Implemented logic for FootballMatchProcessor in case of getting football matches result table.